Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2023/09/20:
- TestEngine: "KeepGUI" option and IM_SUSPEND_TESTFUNC()/SuspendTestFunc() sets OS mouse
  cursor to TestEngine mouse cursor, allowing user to more easily understand the failing state.
  (require IMGUI_VERSION_NUM >= 18992).
- TestEngine: Renamed io.ConfigTakeFocusBackAfterTests to io.ConfigRestoreFocusAfterTests
  and fixed to restore previous focus instead of always focus Test Engine UI window.

2023/09/06:
- TestEngine: WindowResize() can be used to auto-resize a window.

2023/09/05:
- TestEngine: Running a test in GuiFunc mode only provide access to backend clipboard
  instead of redirecting it to a jailed clipboard.

2023/08/15:
- TestSuite: Added -list option (e.g. 'test_suite.exe -list "^table"').
- TestEngine: Added ImGuiTestEngine_GetTestList(), ImGuiTestEngine_GetTestQueue().
- TestEngine: Added IO.CheckDrawDataIntegrity helper (mostly for use by test suite).

2023/07/11:
- TestEngine: Fixed an issue accessing tabs in a TabBar without scrolling policy.

2023/06/23:
- TestEngine: Fixed two case where DockInto() would fail if one or both windows are already docked.

2023/06/22:
- TestEngine: Fixed WindowClose() support when window Docked.

2023/06/21:
- TestEngine: in helper ImGuiTestGenericItemStatus storage struct,
  renamed 'bool Ret' to 'bool RetValue' as it is less ambiguous.
- TestEngine: Added ViewportPlatform_CloseWindow() function to simulate platform closure
  (e.g. ALT+F4 on Windows with viewport enabled and OS decoration enabled) for the purpose
  of testing viewport-specific features. Probably of little use to regular end-user.

2023/06/14
- TestEngine: ItemInfoOpenFullPath() can focus/select inactive docked windows.
  (similar to e.g. opening an intermediary tree node).

2023/06/08